# salka

./: .gitignore  .mcp.json  .npmrc  AGENTS.md  README.md  lint-staged.config.mjs  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/scripts/: export_openapi.py
apps/api/src/: main.py
apps/api/src/application/ports/: llm_analysis_port.py  ocr_port.py
apps/api/src/application/services/: ingredient_normalizer.py  response_policy.py
apps/api/src/application/use_cases/: analyze_by_ingredients_image.py  analyze_by_ingredients_text.py
apps/api/src/core/: config.py  logging.py
apps/api/src/di/: containers.py
apps/api/src/domain/entities/: analysis_result.py  ingredient.py  ingredient_assessment.py
apps/api/src/domain/exceptions/: domain_errors.py
apps/api/src/domain/value_objects/: recommendation.py  score.py  verdict.py
apps/api/src/infrastructure/llm/: mock_llm_analysis_adapter.py  openai_llm_analysis_adapter.py  raw_result.py
apps/api/src/infrastructure/ocr/: gemini_ocr_adapter.py  mock_ocr_adapter.py
apps/api/src/interfaces/: errors.py
apps/api/src/interfaces/middlewares/: request_context.py
apps/api/src/interfaces/schemas/: analysis_schemas.py  problem.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_analysis_image.py  test_analysis_text.py  test_health.py
apps/api/tests/unit/: test_analyze_use_cases.py  test_config.py  test_gemini_ocr_adapter.py  test_ingredient_normalizer.py  test_openai_llm_adapter.py  test_response_policy.py  test_score.py
(+80 files in other folders)
